<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            />

        <EditText
            android:id = "@+id/userName"
            android:layout_width="200sp"
            android:layout_height="50sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            />

        <EditText
            android:id = "@+id/userEmail"
            android:layout_width="200sp"
            android:layout_height="50sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telephone_number"
            />

        <EditText
            android:id = "@+id/userTelephoneNumber"
            android:layout_width="200sp"
            android:layout_height="50sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            />

        <EditText
            android:id = "@+id/userAddress"
            android:layout_width="200sp"
            android:layout_height="50sp"
            />

        <Button
            android:id = "@+id/signUPButton"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:onClick = "onSignUp"
            android:text = "@string/sign_up"
            />

    </LinearLayout>

</RelativeLayout>