<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/checkTicketButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCheckTicket"
            android:text="@string/waiting_ticket" />

        <Button
            android:id="@+id/getOperatorsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onGetOperators"
            android:text="@string/get_operators" />

        <Button
            android:id="@+id/changePasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onChangePassword"
            android:text="@string/change_password" />

    </LinearLayout>

</RelativeLayout>